data/derived/comb/progs/unify/prog1102.ml.out
Characters 46-54:
  let fixpoint (f,b) = wwhile((let k x = f x in (x, x=b)), b);;
                                                ^^^^^^^^
Error: This expression has type 'a * 'b
       but an expression was expected of type 'c -> 'c * bool
